--- a/crmapp/templates/base.html
+++ b/crmapp/templates/base.html
@@ -1,5 +1,7 @@
-{% load custom_filters %}
 
+{% load custom_filters %}
+{%block load_block%}
+    {%endblock%}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/leadlist.css' %}">
+
+    {%block header_block%}
+    {%endblock%}
     <style>
         body, html {
             margin: 0;
@@ -154,7 +159,7 @@
     
     <div class="sidebar">
         <nav class="nav flex-column">
-            <a class="nav-link" href="#"><i class="bi bi-house-door"></i><span>Dashboard</span></a>
+            <a class="nav-link" href="{% url 'lead_count' %}"><i class="bi bi-house-door"></i><span>Dashboard</span></a>
             <a class="nav-link" href="{% url 'list' %}"><i class="bi bi-person"></i><span>Leads</span></a>
             <a class="nav-link" href="{% url 'tasklist' %}"><i class="bi bi-check2-square"></i><span>Tasks</span></a>
            
