--- a/customer/templates/complaintlist.html
+++ b/customer/templates/complaintlist.html
@@ -95,7 +95,7 @@ background-color:navy; /* Yellow for incomplete */
           
         </form>
 
-        <input type="button" class="add-user btn custombtn mr-2 ms-2" name="add-user"  onclick="window.location.href='enterlead'" value="+ Add Lead">
+        
         <button type="button" class="add-user btn custombtn mr-2 ms-2" name="add-user"><i class="fas fa-file-import"></i> Import</button>
 
         
@@ -108,139 +108,12 @@ background-color:navy; /* Yellow for incomplete */
   </nav>
 <!-- top navbar end -->
 
-<!-- second navbar start -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  
-
-    <div class="container-fluid">
-      
-      
-       
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            
-          <li class="nav-item dropdown ms-2">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Active
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-
-          <li class="nav-item dropdown ms-2">
-            <a class="nav-link dropdown-toggle" class="drp" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Fin Year
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-
-          <li class="nav-item dropdown ms-2">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              2022-2023
-            </a>
-            <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <span class="custom-checkbox ms-5"><input type="checkbox" id="checkbox1" name="option[]" value="1"><label for="checkbox1">select all lead</label></span>
-        </ul>
-         
-      </div>
-    </div>
-  </nav>
-<!-- second nav end -->
 
 
-<!-- third navbar start -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    
-    
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          
-        <li class="nav-item dropdown ms-2">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Select Source
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
 
-        <li class="nav-item dropdown ms-2">
-          <a class="nav-link dropdown-toggle" class="drp" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Select Executive
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
 
-        <li class="nav-item dropdown ms-2">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Select Designation
-          </a>
-          <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
 
-        <li class="nav-item dropdown ms-2">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            All Appointments
-          </a>
-          <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
 
-        <button class="btn btn-outline-orange ms-2" type="button">Filter Product</button>
-
-        
-       
-      </ul>
-       
-    </div>
-  </div>
-</nav>
-<!-- third nav end -->
-
-<!-- fourth navbar start -->
-<nav class="navbar navbar-light bg-light">
-  <form class="container-fluid justify-content-start">
-    <button class="btn btn-outline-orange me-2" type="button">MissedAppointments:</button>
-    <button class="btn btn-outline-orange me-2" type="button">No Appointments:</button>
-    <button class="btn btn-outline-orange me-2" type="button">No interaction Leads:</button>
-    <button class="btn btn-outline-orange me-2" type="button">Unassigned Leads:</button>
-    
-  </form>
-</nav>
-<!-- fourth nav end -->
 
  
 
@@ -380,7 +253,7 @@ background-color:navy; /* Yellow for incomplete */
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <script>
   document.getElementById('closeButton').addEventListener('click', function() {
-    window.location.href = '/';
+    window.location.href = '/index2/';
   });
 </script>
 </body>
