--- a/customer/templates/latestdetail.html
+++ b/customer/templates/latestdetail.html
@@ -93,8 +93,14 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <label for="requester_name" class="form-label">Requester Name:</label>
-                                    <input type="text" name="requester_name" class="form-control" id="requester_name" value="">
+                                    <select name="requester_name" id="requester_name" class="form-control">
+                                        <option value="" disabled selected>Select a requester</option>
+                                        {% for user in users %}
+                                            <option value="{{ user.first_name }}">{{ user.first_name }}</option>
+                                        {% endfor %}
+                                    </select>
                                 </div>
+                                
                                 <div class="col-sm-6">
                                     <label for="" class="form-label">Designation:</label>
                                     <input type="text" name="designation" class="form-control" id="" value="">
